--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   }
 }
